<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">六一健康</string>
    <string name="xiaoyi_name">六一博士</string>
    <string name="smart_zone">JKSJ</string>
    <string name="consultation_flow_text1">提交申请</string>
    <string name="consultation_flow_text2">会诊医生接诊</string>
    <string name="consultation_flow_text3">填写病历</string>
    <string name="consultation_flow_text4">等待专家接诊</string>
    <string name="consultation_flow_text5">付款</string>
    <string name="consultation_flow_text6">等待专家意见</string>
    <string name="consultation_flow_hine">继续会诊请点击“下一步”，开始填写会诊</string>
    <string name="SINA_CONSUMER_KEY">473208341</string>
    <string name="SINA_CONSUMER_SECRET">93e55a11ed3587f7aa66cd2926702e83</string>
    <string name="RENREN_APIKEY">51e1896f63a648feaf415ec2d5fb6db0</string>
    <string name="RENREN_SECRET">51e1896f63a648feaf415ec2d5fb6db0</string>
    <string name="RENREN_APPID">212786</string>
    <string name="QQ_APIKEY">8b30e1905cb8cf1c7d35600be9ea8164</string>
    <string name="QQ_APPID">801241883</string>
    <string name="loging">登录中...</string>
    <string name="loading_user_info">登录成功加载个人信息...</string>
    <string name="login_lable">登录</string>
    <string name="login_name_null">用户名不能为空</string>
    <string name="login_pas_null">密码不能为空</string>
    <string name="create_new_count">创建新账号</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="create_new_user_note">设置登录密码,系统将为您分配一个新的账号</string>
    <string name="passwd_not_same">两次密码输入不一致</string>
    <string name="passwd_format_error">密码长度必须是6到12位</string>
    <string name="phone_number_or_email">手机号/邮箱地址</string>
    <string name="format_error">格式错误</string>
    <string name="login_error_note">用户名或密码错误</string>
    <string name="not_null">不能为空</string>
    <string name="not_bund">还未绑定</string>
    <string name="send_succse">发送成功</string>
    <string name="server_fail">服务器响应失败</string>
    <string name="login_sina">新浪微博账号</string>
    <string name="sina_weibo_firend">新浪微博好友</string>
    <string name="other_login">你还可以用以下方式登录</string>
    <string name="sure_psw">确认密码 ：</string>
    <string name="remember_psw">记住密码</string>
    <string name="create_acc">创建账号</string>
    <string name="back_psw">找回密码</string>
    <string name="phone_or_mail">手机号/邮箱</string>
    <string name="complete">完成</string>
    <string name="desc" />
    <string name="login_account">账号 :</string>
    <string name="login_password">密码 :</string>
    <string name="auth">验证码 ：</string>
    <string name="sure">确定</string>
    <string name="all_selected">全选</string>
    <string name="loadingmore">正在加载...</string>
    <string name="setPrivacy">修改密码</string>
    <string name="please_remember_your_num">以下是你的账号，请牢记，并设置新密码</string>
    <string name="login">登  录</string>
    <string name="sendAuth">验证码已发送,请耐心等待~</string>
    <string name="sendAuthFailure">验证码发送失败</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="health_information_cllection">医库</string>
    <string name="accept">接受</string>
    <string name="Att_select">选择关注</string>
    <string name="who">谁关注我</string>
    <string name="see_doctor">看病</string>
    <string name="dataload">正在加载数据...</string>
    <string name="address">所在地</string>
    <string name="homePage">首页</string>
    <string name="Symptom">症状</string>
    <string name="groupList">话题汇</string>
    <string name="searchGroup">输入话题名称</string>
    <string name="disease">疾病</string>
    <string name="docList">医生列表</string>
    <string name="hospital">医院</string>
    <string name="physician">医生</string>
    <string name="medicinal">药品</string>
    <string name="operation">手术</string>
    <string name="check">检查</string>
    <string name="response_error">没有获取到数据</string>
    <string name="json_error">数据解析错误</string>
    <string name="http_error">网络请求失败,请重新请求</string>
    <string name="office">科室</string>
    <string name="data_no">暂无数据</string>
    <string name="serviceExpand">的相关服务</string>
    <string name="near_hospital">附近医院</string>
    <string name="registration">挂号</string>
    <string name="disease_information">疾病信息</string>
    <string name="location_no">定位服务不可用</string>
    <string name="loading">马上来了</string>
    <string name="noTopicNote">没有相关话题，是否提出此话题,寻找朋友?</string>
    <string name="jiankangliao">六一健康</string>
    <string name="bound_email_fall">该邮箱已被别的账户绑定</string>
    <string name="email_bound_success">系统已经给您发送了一封Email，请点击Email中的链接验证邮箱</string>
    <string name="opinion_null">请输入您的意见</string>
    <string name="most_five_hundred">最多可输入500个字符</string>
    <string name="selectArea">请选择地区</string>
    <string name="cancel">取消</string>
    <string name="address_seach">地区</string>
    <string name="yaodianList">药店列表</string>
    <string name="hosList">医院列表</string>
    <string name="dataNO">暂无数据</string>
    <string name="selectCate">选择类型</string>
    <string name="noResult">无符合条件的搜索结果</string>
    <string name="all">全部</string>
    <string name="selectZhicheng">选择职称</string>
    <string name="selectLevel">选择等级</string>
    <string name="unit">千米</string>
    <string name="limit_no">全部</string>
    <string name="search_number">按账号或昵称搜索</string>
    <string name="search_condition">按条件搜索</string>
    <string name="search_space">查看身边的人</string>
    <string name="search_doctor">找医生</string>
    <string name="search_friend">查找朋友</string>
    <string name="search_map">地图</string>
    <string name="search_condition_f">按条件搜索</string>
    <string name="matchContacts">看看六一健康中的朋友</string>
    <string name="adds">地址</string>
    <string name="friendCycle">我的朋友</string>
    <string name="tel">电话</string>
    <string name="near_see_doctor">附近就医</string>
    <string name="near_drugstore">附近药店</string>
    <string name="buyMedicine">购药</string>
    <string name="medicinePrompt">药品正在完善中...</string>
    <string name="zhanghu">账户</string>
    <string name="setting_my_information">关于我</string>
    <string name="setting_location_share">公开位置</string>
    <string name="setting_privacy_psw">修改密码</string>
    <string name="pullAttention">推送健康贴士</string>
    <string name="setting">设置</string>
    <string name="setting_voice_shack">声音及震动提示</string>
    <string name="setting_presskey_voice">开启操作音效</string>
    <string name="start_shack_background">开启震动提示</string>
    <string name="setting_maillist_friend">通讯录好友</string>
    <string name="setting_invite_friend">邀请好友</string>
    <string name="setting_sina_friend">邀请新浪微博好友</string>
    <string name="setting_apk">关于六一健康</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_grade">给六一健康评分</string>
    <string name="setting_feedbackText">请输入你的宝贵意见</string>
    <string name="setting_leave_qingchuhuancun">清除缓存</string>
    <string name="setting_leave_qingchuhuancun_end">已清除缓存</string>
    <string name="changeAccount">退  出  登  录</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="phone_bound_success">绑定新手机成功</string>
    <string name="setting_bindingweibo">新浪微博</string>
    <string name="bound_new_phone_fall">绑定新手机失败</string>
    <string name="setting_zhanghao_safe">账号安全</string>
    <string name="sms_content">给你推荐一个找专家医生的APP：六一健康，下载：http://yijiankangv.mobi/SJ/dl.html</string>
    <string name="setting_leave_quxiao">取消</string>
    <string name="ok_button">确 定</string>
    <string name="age">年龄</string>
    <string name="age2">年龄：</string>
    <string name="joined_jiankangliao_friend">已加入六一健康好友</string>
    <string name="setting_app_update">软件更新</string>
    <string name="update">升级</string>
    <string name="invite_sina_friend_text">给你推荐一个找专家医生的APP：六一健康，下载：http://yijiankangv.mobi/SJ/dl.html</string>
    <string name="sdcard_not_enough">您的SD卡空间不足</string>
    <string name="setting_health_down">六一健康下载</string>
    <string name="setting_health_update">六一健康升级</string>
    <string name="setting_health_downed_progres">已下载</string>
    <string name="setting_health_downloaded">下载完成,点击安装</string>
    <string name="setting_health_down_fail">六一健康下载失败</string>
    <string name="setting_getway_error">网络错误</string>
    <string name="setting_getway_error_note">六一健康网络连接无效，请检查网络连接</string>
    <string name="setting_getway_error_note_no_bianji">六一健康网络连接无效，您无法修改当前资料</string>
    <string name="onHandler">处理中</string>
    <string name="chushihua">初始化中...</string>
    <string name="privacyremind">您当前的账号没有设置密码，建议您设置密码后退出当前账号</string>
    <string name="outremind">退出后我们不会删除任何数据，下次可输入账号密码登录，建议您牢记账号和密码</string>
    <string name="outLogin">退出登录</string>
    <string name="app_version_isnew">当前已是新版本</string>
    <string name="sina_weibo_bound_text">微博绑定</string>
    <string name="setting_bound_mobile">绑定手机</string>
    <string name="setting_bound_email">绑定邮箱</string>
    <string name="setting_tijiao">提交</string>
    <string name="setting_mobile_number">手 机 号 ：</string>
    <string name="setting_please_bound_email">请输入要绑定的邮箱号码</string>
    <string name="setting_input_userpsd">输入账号密码</string>
    <string name="setting_input_userpsd_hint">请输入当前账号密码</string>
    <string name="setting_bound_weibo_miaoshu">绑定微博\n可以让朋友更快找到你\n\n亲,你还在等什么?快点行动吧.\n</string>
    <string name="setting_bound_mobile_miaoshu">绑定手机可直接用手机号登录\n可以用于找回密码\n也可以让朋友更快的找到你\n\n\n</string>
    <string name="setting_bound_mobile_miaoshu_befor">绑定手机可直接用手机号登录\n可以用于找回密码\n也可以让朋友更快的找到你\n</string>
    <string name="setting_bound_emaile_miaoshu">绑定邮箱\n可直接用邮箱号码登录\n现在就绑定!\n</string>
    <string name="setting_next">下一步</string>
    <string name="setting_huoqu_yanzhengma">获取</string>
    <string name="setting_input_psd">请输入密码</string>
    <string name="select_age">选择年龄</string>
    <string name="select_add">选择地点</string>
    <string name="select_sex">选择性别</string>
    <string name="select_att">选择关注</string>
    <string name="find_weibo_friend">寻找微博好友</string>
    <string name="most_thirty">最多可输入100个字符</string>
    <string name="setting_input_old_psd">请输入旧密码</string>
    <string name="setting_input_new_psd">请输入6-12位新密码</string>
    <string name="setting_input_new_psd_agin">请再次输入密码</string>
    <string name="setting_input_psd_error">输入密码错误</string>
    <string name="setting_input_email_error">邮箱格式不正确</string>
    <string name="setting_input_number_error">手机号码格式不正确</string>
    <string name="setting_login_password"> 设置您的登录密码</string>
    <string name="getway_error_note">网络连接无效，请检查网络连接</string>
    <string name="email_toastSpecialcharter">请输入正确的邮箱地址</string>
    <string name="psw_toastNull">密码不能为空</string>
    <string name="phone_auth_code">验证码已经发出，请查收</string>
    <string name="birthday2">生日：</string>
    <string name="sex2">性别：</string>
    <string name="zhiye2">职业：</string>
    <string name="paizhao">拍照</string>
    <string name="bendiwenjian">本地文件</string>
    <string name="do_that_later">取消</string>
    <string name="cameraadd">拍照</string>
    <string name="galleryadd">相册</string>
    <string name="videoadd">视频</string>
    <string name="choice_image">请选择要上传的图片</string>
    <string name="buy">购买</string>
    <string name="delete">删除</string>
    <string name="name">姓\t\t\t 名 ：</string>
    <string name="remark">备\t\t\t 注 ：</string>
    <string name="kindly_remander">温馨提示:</string>
    <string name="remander_have_buy_wait_to_pay">您已经购买了此医生的留言咨询服务,需要继续完成支付</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="please_input_phone_number">请输入您的手机号</string>
    <string name="please_input_something_to_doctor">请输入备注(非必填最多200字)</string>
    <string name="buy_time">购买时间</string>
    <string name="patient_info">患者信息</string>
    <string name="name2">姓名：</string>
    <string name="id_card_num">身份证号：</string>
    <string name="phone_num">手机：</string>
    <string name="phone_code">发送验证码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="user_protocol_clause">用户协议及隐私条款</string>
</resources>