<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popwindow_bg"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/choice_image"
        android:textColor="#575757"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@drawable/line" />

    <Button
        android:id="@+id/galleryadd"
        style="@style/popwindow_white"
        android:layout_marginBottom="10dp"
        android:text="@string/galleryadd"
        android:textColor="@color/gray_text" />

    <Button
        android:id="@+id/my_hezuozhe"
        style="@style/popwindow_white"
        android:layout_marginBottom="10dp"
        android:text="我的合作者"
        android:visibility="gone" />

    <View style="@style/common_split_line_1dp" />

    <Button
        android:id="@+id/cameraadd"
        style="@style/popwindow_white"
        android:layout_marginBottom="10dp"
        android:text="@string/cameraadd"
        android:textColor="@color/gray_text" />

    <View style="@style/common_split_line_1dp" />

    <Button
        android:id="@+id/videoadd"
        style="@style/popwindow_white"
        android:layout_marginBottom="10dp"
        android:text="@string/videoadd"
        android:textColor="@color/gray_text" />

    <View style="@style/common_split_line_1dp" />

    <Button
        android:id="@+id/extraadd"
        style="@style/popwindow_white"
        android:layout_marginBottom="10dp"
        android:textColor="#2c7dd6"
        android:visibility="gone" />

    <View style="@style/common_split_line_1dp" />

    <Button
        android:id="@+id/cancel"
        style="@style/popwindow_gray"
        android:layout_marginBottom="30dp"
        android:text="取消"
        android:textColor="@color/gray_text" />

</LinearLayout>