<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/gray_title_layout"/>
    <EditText
        android:id="@+id/find_paswd_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/icon_bg_gray_96"
        android:layout_margin="10dp"
        android:hint="@string/please_input_phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/find_paswd_input_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_bg_gray_96"
            android:hint="@string/please_input_verify_code"
            android:singleLine="true"
            android:maxLength="6"
            android:inputType="number"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/find_paswd_btn_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/icon_bg_pink_96"
            android:text="@string/phone_code"/>
    </LinearLayout>

    <Button
        android:id="@+id/find_paswd_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bt_regist_sure"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/setting_next"/>



</LinearLayout>