<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/gray_title_layout" />

    <EditText
        android:id="@+id/register_input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_edittext_input_bg_white"
        android:hint="@string/please_input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@color/gray_color2" />

    <EditText
        android:id="@+id/register_input_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edittext_input_bg_white"
        android:hint="@string/setting_input_psd"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@color/gray_color2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/register_input_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_edittext_input_bg_white"
            android:hint="@string/please_input_verify_code"
            android:maxLength="6"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/gray_color2" />

        <Button
            android:id="@+id/register_btn_verifycode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/icon_btn_pink_bg"
            android:text="@string/phone_code"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/register_ptotocol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:text="@string/user_protocol_clause"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/register_checkbox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/register_ptotocol"
            android:background="@drawable/register_checkbox_selector"
            android:button="@null"
            android:checked="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_btn_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bt_regist_sure"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="绑定后,您的手机号和六一健康账号都可以登录。"
        android:textColor="@color/text_gray"
        android:textSize="16sp" />


</LinearLayout>