<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <include android:id="@+id/title" layout="@layout/title_layout" />
    <org.handmark.pulltorefresh.library.PullToRefreshScrollView
        xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/pull_refresh_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fadingEdge="none"
        android:fillViewport="true"
        ptr:ptrMode="pullDownFromTop" >
        </org.handmark.pulltorefresh.library.PullToRefreshScrollView>
	    <LinearLayout 
	        android:id="@+id/consult_service_content"
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:orientation="vertical"
	        >
	        <LinearLayout 
		        android:id="@+id/consult_service_contentLayout"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		        >
		    </LinearLayout>
		    <RelativeLayout 
		        android:id="@+id/consult_service_indent"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:visibility="gone"
		        >
		        <View style="@style/common_split_line_1dp" android:layout_marginTop="10dp"/>
		        <TextView 
		            android:id="@+id/consult_service_tv_name"
		            android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_marginTop="15dp"
		    		android:text="24小时"
		            />
		        <TextView 
		            android:id="@+id/consult_service_tv_price"
		            android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_marginTop="15dp"
		    		android:layout_alignParentRight="true"
		    		android:text="100元"
		            />
		        <View style="@style/common_split_line" android:id="@+id/consult_service_split_line1" android:layout_marginTop="5dp" android:layout_below="@id/consult_service_tv_price"/>
		        <TextView 
		            android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@id/consult_service_split_line1"
		    		android:text="@string/buy_time"
		            />
		        <TextView 
		            android:id="@+id/consult_service_indent_time"
		            android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@id/consult_service_split_line1"
		    		android:layout_alignParentRight="true"
		    		android:text="2015-2-12 12:30"
		            />
		        <View style="@style/common_split_line_1dp" android:id="@+id/consult_service_split_line2" android:layout_below="@id/consult_service_indent_time"/>
		        <Button 
		            android:id="@+id/consult_service_indent_btn_pay"
		            android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@id/consult_service_split_line2"
		    		android:text="@string/buy"
		            />
		        <Button 
		            android:id="@+id/consult_service_indent_btn_delete"
		            android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@id/consult_service_indent_btn_pay"
		    		android:text="@string/delete"
		            />
		        <LinearLayout 
		            android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:padding="5dp"
		    		android:layout_below="@id/consult_service_indent_btn_delete"
		    		android:orientation="vertical"
		            >
			        <TextView 
			            android:layout_width="match_parent"
			    		android:layout_height="wrap_content"
			    		android:text="@string/kindly_remander"
			            />
			        <TextView 
			            android:layout_width="match_parent"
			    		android:layout_height="wrap_content"
			    		android:text="@string/remander_have_buy_wait_to_pay"
			            />
		        </LinearLayout>
		    </RelativeLayout>
	    </LinearLayout>
		

</LinearLayout>
